--- a/repositoryUserInterface/app/views/Application/presenceactuate.html
+++ b/repositoryUserInterface/app/views/Application/presenceactuate.html
@@ -50,9 +50,6 @@
 				var fromDay, toDay;
 				var MotionSensor, MotionSensorID;
 
-				var temp="http://"+document.location.hostname+":"+document.location.port+"/";
-
-
 				/*
 				 * Setting the AJAX to work in sycnhronous fashion
 				 */
@@ -309,7 +306,7 @@
 						});
 						if(receivedData[RESPONSE_STATUS_CODE] == SUCCESS) {
 							alert("Actuation request made successfully!");
-							window.location = temp + URL_PRESENCE_ACTUATE;
+							window.location = URL_UI_SERVER + URL_PRESENCE_ACTUATE;
 						}
 						else {
 							alertActuateDeviceError("Following error occured: " + receivedData[RESPONSE_MESSAGE]);
@@ -345,7 +342,7 @@
 					}					
 					/*else{
 						//check whether there is an association for the selected actuator
-						var urlGuardRulesAssocGet =	temp+URL_ASSOC_GET_GUARD_RULE;
+						var urlGuardRulesAssocGet =	URL_UI_SERVER+URL_ASSOC_GET_GUARD_RULE;
 						var getAssoc = {};
 						var guardRuleAssoc = [];
 						getAssoc[SECRET_KEY] = FAKE_SECRET_KEY;
@@ -366,7 +363,7 @@
 							if(guardRuleAssoc[RESPONSE_STATUS_CODE] == NO_GUARD_RULEASSOC_FOUND) {
 								
 								errorState = true;
-								var url = temp+URL_GUARD_RULE;
+								var url = URL_UI_SERVER+URL_GUARD_RULE;
 
 								$("#spanMS" + removeSpace(deviceMSName)).show('slow', function() {
 								});
@@ -392,7 +389,7 @@
 					}
 					/*else{
 						//check whether there is an association for the selected actuator
-						var urlGuardRulesAssocGet =	temp+URL_ASSOC_GET_GUARD_RULE;
+						var urlGuardRulesAssocGet =	URL_UI_SERVER+URL_ASSOC_GET_GUARD_RULE;
 						var getAssoc = {};
 						var guardRuleAssoc = [];
 						getAssoc[SECRET_KEY] = FAKE_SECRET_KEY;
@@ -413,7 +410,7 @@
 							if(guardRuleAssoc[RESPONSE_STATUS_CODE] == NO_GUARD_RULEASSOC_FOUND) {
 								
 								errorState = true;
-								var url = temp+URL_GUARD_RULE;
+								var url = URL_UI_SERVER+URL_GUARD_RULE;
 
 								$("#span" + removeSpace(deviceName)).show('slow', function() {
 								});
@@ -655,9 +652,8 @@
 
 				//Getting Device List
 				try {
-					var temp="http://"+document.location.hostname+":"+document.location.port+"/";
 
-					$.get(temp+URL_LIST_ALL_DEVICES, function(data) {					
+					$.get(URL_UI_SERVER+URL_LIST_ALL_DEVICES, function(data) {					
 						receivedDeviceData = data;					
 					});
 				} catch(e) {
@@ -887,14 +883,13 @@
 										cancelReqList["cancelRequestList"] = listCReq;											
 
 										try {
-											//var temp="http://"+document.location.hostname+":"+document.location.port+"/";
-											$.post(temp+URL_CANCEL_ACTUATE_REQUEST, JSON.stringify(cancelReqList), function(data) {
+											$.post(URL_UI_SERVER+URL_CANCEL_ACTUATE_REQUEST, JSON.stringify(cancelReqList), function(data) {
 											receivedData = data;
 											});
 											if(receivedData[RESPONSE_STATUS_CODE] == SUCCESS) {
 
 												alert("Actuation requests successfully cancelled!");
-												window.location = temp + URL_PRESENCE_ACTUATE;
+												window.location = URL_UI_SERVER + URL_PRESENCE_ACTUATE;
 											}
 											else {
 												if(receivedData[RESPONSE_STATUS_CODE] == TASKLET_NOT_CANCELED) {
