Fixed visualization bug

--- a/repositoryUserInterface/app/views/Application/userdisplay.html
+++ b/repositoryUserInterface/app/views/Application/userdisplay.html
@@ -386,7 +386,7 @@
 								$("#imageDiv").show();
 								$("#tools").hide();
 								var s=receivedData["filename"];
-								$("#staticImage").attr("src","../public/"+s);
+								$("#staticImage").attr("src","../public/generatedImages/"+s);
 							} 
 							else if(receivedData=="No Data Found")
 							{	
