Fixed bug in downloadata API

--- a/repositoryUserInterface/app/views/Application/display.html
+++ b/repositoryUserInterface/app/views/Application/display.html
@@ -393,7 +393,7 @@
 								$("#tools").hide();
 								var s=receivedData["filename"];
 								$("#staticImage").attr("src","../public/generatedImages/"+s);
-								downloadData.push("The data cannot be downloaded. Please reduce the time");
+								//downloadData.push("The data cannot be downloaded. Please reduce the time");
 								$("#speed").attr("disabled","disabled");
 							} 
 							else if(receivedData=="No Data Found")
